#  Copyright 2025 Zeppelin Bend Pty Ltd
#
#  This Source Code Form is subject to the terms of the Mozilla Public
#  License, v. 2.0. If a copy of the MPL was not distributed with this
#  file, You can obtain one at https://mozilla.org/MPL/2.0/.

[build-system]
requires = [
    "setuptools",
    "wheel",
    "build>=1.2.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "zepben.eas"
version = "0.30.0b1"
description = "Python SDK for interacting with the Evolve App Server"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MPL-2.0"
requires-python = '>=3.10'
authors = [
    {name = "Ramon Bouckaert", email = "ramon.bouckaert@zepben.com"},
    {name = "Max Chesterfield", email = "max.chesterfield@zepben.com"}
]
dependencies = [
    "geojson==2.5.0",
    "requests<3.0.0,>=2.26.0",
    "urllib3==2.5.0",
    "zepben.ewb==1.1.0",
    "aiohttp[speedups]==3.9.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent"
]

[project.urls]
Repository = "https://github.com/zepben/eas-python-client"
Homepage = "https://zepben.com"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-httpserver==1.0.8",
    "trustme==0.9.0"
]
eas-codegen = [
    "ariadne-codegen @ git+https://github.com/chestm007/ariadne-codegen"  # This could break a pypi upload. Waiting on https://github.com/mirumee/ariadne-codegen/pull/413 to be merged.
]

[tool.setuptools.packages.find]
where = ["src/"]

[tool.ariadne-codegen]
remote_schema_url = "http://127.0.0.1:7654/api/graphql"  # Set to address of Evolve App Server
enable_custom_operations=true
target_package_path='src/zepben/eas/lib'
target_package_name='generated_graphql_client'
include_comments=false
introspection_descriptions=true
#introspection_schema_description=true
#introspection_directive_is_repeatable=true
