#  Copyright 2026 Zeppelin Bend Pty Ltd
#
#  This Source Code Form is subject to the terms of the Mozilla Public
#  License, v. 2.0. If a copy of the MPL was not distributed with this
#  file, You can obtain one at https://mozilla.org/MPL/2.0/.

[build-system]
requires = [
    "setuptools",
    "build>=1.2.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "zepben.eas"
version = "2.15.0b1"
description = "Python SDK for interacting with the Evolve App Server"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MPL-2.0"
requires-python = '>=3.10'
authors = [
    {name = "Ramon Bouckaert", email = "ramon.bouckaert@zepben.com"},
    {name = "Max Chesterfield", email = "max.chesterfield@zepben.com"}
]
dependencies = [
    "geojson==2.5.0",
    "httpx==0.28.1",
    "graphql-core==3.2.8",
    "pydantic",
    "pydantic_core",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent"
]

[project.urls]
Repository = "https://github.com/zepben/eas-python-client"
Homepage = "https://zepben.com"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-httpserver==1.0.8",
    "trustme==0.9.0"
]
codegen = [
    "ariadne-codegen==0.18.0",
    "click"
]

[tool.setuptools.packages.find]
where = ["src/"]

[tool.ariadne-codegen]
remote_schema_url = "http://evolve-app-server:7654/api/graphql"  # Set to address of Evolve App Server
enable_custom_operations=true
include_comments=false
target_package_path='src/zepben/eas'
target_package_name='lib'
introspection_descriptions=true
introspection_input_value_deprecations=true
plugins=[
    "ariadne_plugins.custom_query_type_hinter.CustomQueryTypeHinterPlugin",
    "ariadne_plugins.missed_import_checker.MissedImportCheckerPlugin",
    "ariadne_plugins.gql_all_fields.GqlAllFieldsPlugin",
    "ariadne_plugins.license_headers.LicenseHeadersPlugin",
]
files_to_include=[
    "./ariadne_plugins/types.py"
]
